[package]
name = "tpn-pool"
version = "1.3.3"
edition = "2021"
description = "TPN Pool - Rust miner pool implementation with web dashboard"
build = "build.rs"

[features]
default = ["embed-ip2location"]
embed-ip2location = []

[dependencies]
# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# Geolocation
maxminddb = "0.24"
ip2location = "0.6.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
semver = "1"
dashmap = "5"
csv = "1"
regex = "1"
chrono = "0.4"
zip = "2"
anyhow = "1"
thiserror = "1"
url = "2"
dirs = "5"
bittensor-rs = { git = "https://github.com/one-covenant/bittensor-rs", tag = "bittensor-rs-v0.1.1" }
subxt = "0.44.3"

# Auth
jsonwebtoken = "9"
